Fixed boolean field align issue.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -166,15 +166,6 @@
 	white-space: nowrap;
 }
 
-.panel-layout .boolean-item label,
-.panel-layout .boolean-item input {
-	float: left;
-}
-
-.panel-layout .boolean-item input {
-	margin-top: 3px !important;
-}
-
 .panel-related .panel-header {
 	border-bottom: none;
 }
